# adhan-system-rust

./: Cargo.toml  README.md
src/: main.rs  main_old.rs  methods.rs  models.rs  routes.rs
src/cli/: main.rs
src/daemon/: main.rs  methods.rs  patched_methods.rs  routes.rs
testing/: adhanconf.toml  ismconf.toml
