[package]
name = "adhan-system-rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies] 
salah = "0.7.0"
toml = "0.5.9"
serde = "1.0.145"
serde_derive = "1.0.145"
chrono = "0.4.22"
notify-rust = "4.5.10"
tokio = { version = "1", features = ["full"] }
# warp = "0.3.2"
serde_json = "1.0.86"
actix-web = "4"
ctrlc = "3.2.3"

# [dependencies.rocket]
# version = "0.5.0-rc.2"
# features = ["json"]
